# hoppscotch-to-postman-converter

./: .gitignore  README.md  hoppscotch_to_postman_converter.py  main.py  pyproject.toml
Formula/: hoppscotch-converter.rb
src/hoppscotch_converter/: cli.py  converter.py
